k8s/workloads/gatus/manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gatus
  labels:
    app: gatus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gatus
  template:
    metadata:
      labels:
        app: gatus
    spec:
      nodeSelector:
        platform.io/type: vm
      containers:
        - name: gatus
          image: twinproduction/gatus:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          configMap:
            name: config
            items:
              - key: config.yaml
                path: config.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gatus
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: gatus
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gatus

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`gatus.rvserver.online`)
      kind: Rule
      services:
        - name: gatus
          port: 80
